[package]
name = "grpc-client"
version = "0.1.0"
authors = ["Nick Gamroth <thebeekeeper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
bytes = "0.4"
env_logger = { version = "0.5", default-features = false }
log = "0.4"
http = "0.1"
prost = "0.5"
tokio = "0.1"
tower-request-modifier = { git = "https://github.com/tower-rs/tower-http" }
tower-hyper = "0.1"
hyper = "0.12"
tower-grpc = { version = "0.1.1", features = ["tower-hyper"] }
tower-service = "0.2"
tower-util = "0.1"

[build-dependencies]
tower-grpc-build = { version = "0.1.0", features = ["tower-hyper"] }

